--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
             <div class="cartAmount">0</div>
         </div>
     </div>
+
+    <div class="shop" id="shop">
+        <div class="item">
+            <img width="200" src="images/img-1.jpg" alt="">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam enim corporis ad. Odit ducimus, hic incidunt, minus quibusdam eos nesciunt saepe aut in dolorem vero cumque! Possimus consectetur culpa quasi?</p>
+                <div class="price-quantity">
+                    <h2>$ 45</h2>
+                    <div class="buttons">
+                        <i class="bi bi-file-minus-fill"></i>
+                        <div class="qunatity">0</div>
+                        <i class="bi bi-file-plus-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
