--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </div>
 
     <div class="shop" id="shop">
-        <div class="item">
-            <img width="200" src="images/img-1.jpg" alt="">
+        <div class="item">  
+            <img width="220" src="images/img-1.jpg" alt="">
             <div class="details">
                 <h3>Casual Shirt</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam enim corporis ad. Odit ducimus, hic incidunt, minus quibusdam eos nesciunt saepe aut in dolorem vero cumque! Possimus consectetur culpa quasi?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <div class="price-quantity">
                     <h2>$ 45</h2>
                     <div class="buttons">
@@ -33,9 +33,51 @@
                 </div>
             </div>
         </div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">  
+            <img width="220" src="images/img-1.jpg" alt="">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="price-quantity">
+                    <h2>$ 45</h2>
+                    <div class="buttons">
+                        <i class="bi bi-file-minus-fill"></i>
+                        <div class="qunatity">0</div>
+                        <i class="bi bi-file-plus-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">  
+            <img width="220" src="images/img-1.jpg" alt="">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="price-quantity">
+                    <h2>$ 45</h2>
+                    <div class="buttons">
+                        <i class="bi bi-file-minus-fill"></i>
+                        <div class="qunatity">0</div>
+                        <i class="bi bi-file-plus-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">  
+            <img width="220" src="images/img-1.jpg" alt="">
+            <div class="details">
+                <h3>Casual Shirt</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <div class="price-quantity">
+                    <h2>$ 45</h2>
+                    <div class="buttons">
+                        <i class="bi bi-file-minus-fill"></i>
+                        <div class="qunatity">0</div>
+                        <i class="bi bi-file-plus-fill"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
