--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <title>Clothing Store</title>
+    <title>Cart</title>
 </head>
 <body>
     <div class="navbar">
@@ -21,10 +21,10 @@
         </a>
     </div>
 
-    <div class="shop" id="shop">
-        
-    </div>
+    <div id="label" class="text-center"></div>
+    
+    <div class="shopping-cart" id="shopping-cart"></div>
 </body>
 <script src="src/Data.js"></script>
-<script src="src/main.js"></script>
+<script src="src/cart.js"></script>
 </html>
